INCLUDES = -I$(top_srcdir)/..

AUTOMAKE_OPTIONS = gnu no-dependencies

noinst_LTLIBRARIES = libcxxlang.la

cxxlangdir=$(pkgincludedir)/c++/lang

libcxxlang_la_SOURCES = \
Error.cxx \
Exception.cxx \
IllegalArgumentException.cxx \
IllegalStateException.cxx \
Long.cxx \
NullPointerException.cxx \
NumberFormatException.cxx \
OutOfMemoryError.cxx \
RuntimeException.cxx \
Throwable.cxx \
UnsupportedOperationException.cxx

cxxlang_HEADERS = \
Comparable.h \
Error.h \
Exception.h \
IllegalArgumentException.h \
IllegalStateException.h \
Long.h \
NullPointerException.h \
NumberFormatException.h \
OutOfMemoryError.h \
RuntimeException.h \
String.h \
Throwable.h \
UnsupportedOperationException.h
